feat: 配置包以支持发布到 GitHub Packages 并更新项目元数据

--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
-  "name": "skills-manager",
+  "name": "@lijianru/skills-manager",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lijianru/skills-manager.git"
+  },
   "version": "1.0.0",
   "description": "The ultimate CLI for managing and syncing AI coding skills (Cursor Rules, Prompts) across multiple IDEs like Cursor, Windsurf, Copilot, and more.",
   "main": "index.js",
