--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -20,13 +20,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
-          registry-url: 'https://npm.pkg.github.com'
-          scope: '@lijianru'
+          registry-url: 'https://registry.npmjs.org'
 
       - run: pnpm install
       - run: pnpm run build
-      - run: |
-          echo "@lijianru:registry=https://npm.pkg.github.com" > .npmrc
-          pnpm publish --no-git-checks
+      - run: pnpm publish --no-git-checks
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
