--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@lijianru/skills-manager",
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/lijianru/skills-manager.git"
   },
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "The ultimate CLI for managing and syncing AI coding skills (Cursor Rules, Prompts) across multiple IDEs like Cursor, Windsurf, Copilot, and more.",
   "main": "index.js",
   "scripts": {
