--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,15 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: pnpm/action-setup@v2
-        with:
-          version: 9
-
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
 
-      - run: pnpm install
-      - run: pnpm run build
-      - run: pnpm publish --no-git-checks --provenance
+      - run: npm install
+      - run: npm run build
+      - run: npm publish --provenance
